crates/toml/tests/snapshots/invalid/bool/wrong-case-false.stderr
TOML parse error at line 1, column 27
  |
1 | wrong-case-false        = FALSE
  |                           ^^^^^
invalid boolean, expected `false`
